SPJ-scan-scan: Cherry picked fix for bug#57034 into SPJ branch.